--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
-baseurl: "henrydavidllerena.github.io/myblog/" # the subpath of your site, e.g. /blog/
+url: "henrydavidllerena.github.io/myblog/" # the subpath of your site, e.g. /blog/
 #url: "" # the base hostname & protocol for your site
 cover: "/assets/cotopaxi.jpg"
 logo: "/assets/math.png"
