--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: Personal webpage
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
+subtitle: "PhD student at the LaMME"
 email: david.llerena@univ-evry.fr
 name: David Llerena
 description: ""
