--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Personal webpage
+title: David Llerena
 subtitle: "PhD student at the LaMME"
 email: david.llerena@univ-evry.fr
 name: David Llerena
@@ -18,10 +18,9 @@ description: ""
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
-url: ""
-# "https:henrydavidllerena.github.io/myblog/" # the subpath of your site, e.g. /blog/
+url: "https:henrydavidllerena.github.io/myblog/" # the subpath of your site, e.g. /blog/
 #url: "" # the base hostname & protocol for your site
-cover: "/assets/cotopaxi.jpg"
+cover: "/assets/amazonia.jpg"
 logo: "/assets/math.png"
 
 # Build settings
