--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: David Llerena
-subtitle: "PhD student at the LaMME"
+subtitle: "PhD student"
 email: david.llerena@univ-evry.fr
 name: David Llerena
 description: ""
