--- a/_config.yml
+++ b/_config.yml
@@ -85,16 +85,16 @@ social:
 
   - name: Orcig
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
-    desc: Fork me on GitHub
+    username: davidllerna
+    url: ""
+    desc: 
     share: false
 
   - name: LinkedIn
     icon: linkedin
-    username: Ben Centra
-    url: https://www.linkedin.com/pub/ben-centra/47/769/60a
-    desc: Connect with me on LinkedIn
+    username: davidllerena
+    url: ""
+    desc:
     share: true
 
   
