--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: ""
 url: "https:henrydavidllerena.github.io/myblog/" # the subpath of your site, e.g. /blog/
 #url: "" # the base hostname & protocol for your site
 cover: "/assets/amazonia.jpg"
-logo: "/assets/math.png"
+logo: "/assets/favicon.ico"
 
 # Build settings
 markdown: kramdown
@@ -32,7 +32,7 @@ highlightjs_theme: "monokai-sublime"
 # https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
 pagination:
   enabled: true
-  per_page: 1
+  per_page: 5
   permalink: "/page/:num/"
   sort_reverse: true
 
