--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: David Llerena
 subtitle: "PhD student"
 email: david.llerena@univ-evry.fr
 name: David Llerena
-description: "Personal web page"
+description: "No Rest for the Wicked"
    
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
