--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: David Llerena
 subtitle: "PhD student"
 email: david.llerena@univ-evry.fr
 name: David Llerena
-description: "No Rest for the Wicked"
+description: "<i>In vino veritas</i>"
    
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
@@ -28,23 +28,22 @@ markdown: kramdown
 inter_post_navigation: false
 highlightjs_theme: "monokai-sublime"
 
-# Pagination Settings
 # https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
 pagination:
-  enabled: true
-  per_page: 5
+  enabled: false
+  per_page: 1
   permalink: "/page/:num/"
-  sort_reverse: true
+  sort_reverse: false
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
 jekyll-archives:
   enabled:
     - categories
     - tags
-  layout: 'archive'
-  permalinks:
-    category: '/category/:name/'
-    tag: '/tag/:name/'
+  #layout: 'archive'
+  #permalinks:
+  #  category: '/category/:name/'
+  #  tag: '/tag/:name/'
 
 # Disqus comments
 # disqus_shortname: bencentra
@@ -53,12 +52,12 @@ jekyll-archives:
 # ga_tracking_id: "UA-XXXX-1"
 
 # Category descriptions (for archive pages)
-descriptions:
-  - cat: jekyll
-    desc: "Posts describing Jekyll setup techniques."
+#descriptions:
+##  - cat: jekyll
+#    desc: "Posts describing Jekyll setup techniques."
 
-  - cat: dummy
-    desc: "Just some placeholder posts, lorem ipsum and the rest."
+#  - cat: dummy
+#    desc: "Just some placeholder posts, lorem ipsum and the rest."
 
 # Social icons and sharing options
 #
@@ -81,7 +80,7 @@ social:
     username: david.llerena
     url: ""
     desc: ""
-    share: true
+    share: false
 
   - name: Orcig
     icon: github
@@ -95,7 +94,7 @@ social:
     username: davidllerena
     url: ""
     desc:
-    share: true
+    share: false
 
   
 
